--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,6 @@ fabric.properties
 # See https://youtrack.jetbrains.com/issue/JBR-2257
 .idea/$CACHE_FILE$
 
+.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/webstorm
