add some settings to project

--- a/react-theory/package.json
+++ b/react-theory/package.json
@@ -20,6 +20,8 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eject": "0.0.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -52,6 +54,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-test-render": "^1.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
