--- a/react-hoc/package.json
+++ b/react-hoc/package.json
@@ -11,10 +11,10 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-hoc/node_modules/.bin/react-scripts start",
-    "build": "react-hoc/node_modules/.bin/react-scripts build",
-    "test": "react-hoc/node_modules/.bin/react-scripts test",
-    "eject": "react-hoc/node_modules/.bin/react-scripts eject"
+    "start": "node_modules/.bin/react-scripts start",
+    "build": "node_modules/.bin/react-scripts build",
+    "test": "node_modules/.bin/react-scripts test",
+    "eject": "node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
