--- a/ES6/package.json
+++ b/ES6/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.3.0",
-    "webpack": "^4.44.0"
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
