--- a/ES6/package.json
+++ b/ES6/package.json
@@ -16,5 +16,8 @@
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
